[gd_scene load_steps=18 format=2]

[ext_resource path="res://cenas/PlanodeFundo.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonte/Pixelmania.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/imagens/btn_red.png" type="Texture" id=3]
[ext_resource path="res://assets/imagens/btn_blue.png" type="Texture" id=4]
[ext_resource path="res://assets/imagens/personagem.png" type="Texture" id=5]
[ext_resource path="res://assets/imagens/btn_green.png" type="Texture" id=6]
[ext_resource path="res://scripts/UIGameOver.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 28, 10, 14 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 10, 28, 10, 14 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 6
outline_size = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 6
outline_size = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 6
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 64, 32 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 64, 32 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 32 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[node name="UIGameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanodeFundo" parent="." instance=ExtResource( 1 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 72, 114 )
scale = Vector2( 3, 3 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="LabelGameOver" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.5
margin_top = 12.0
margin_right = 75.5
margin_bottom = 35.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPontuacao" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = -24.0
margin_right = 75.5
margin_bottom = -12.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0 PONTOS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelRecorde" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = -6.0
margin_right = 75.5
margin_bottom = 6.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "RECORDE 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMenu" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -27.0
margin_right = 52.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJogar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -27.5
margin_top = -27.0
margin_right = 27.5
margin_bottom = -5.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "JOGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSair" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -27.0
margin_right = -5.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
text = "SAIR"

[connection signal="pressed" from="ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
[connection signal="pressed" from="ButtonJogar" to="." method="_on_ButtonJogar_pressed"]
[connection signal="pressed" from="ButtonSair" to="." method="_on_ButtonSair_pressed"]
